Arreglando urls cortadas de img y logos

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <i class="fa-solid fa-bars"></i>
             <figure class="container-logo">
                 <a href="#">
-                    <img class="logo" src="../img/CLogo.png" alt="Logo comparados">
+                    <img class="logo" src="./src/img/CLogo.png" alt="Logo comparados">
                 </a>
             </figure>
             <ul class="menu">
@@ -100,7 +100,7 @@
                         <a href="/">
                             <h4><small> Imagen</small>Más</h4>
                             <picture>
-                                <img class="Imagen" src="./src/img/AceiteMazeite.jpg" alt="AceiteMazeite">
+                                <img class="Imagen" src="/src/img/AceiteMazeite.jpg" alt="AceiteMazeite">
                             </picture>
                         </a>
                     </div>
@@ -111,7 +111,7 @@
                         <a href="/">
                             <h4><small> Imagen</small>Más</h4>
                             <picture>
-                                <img class="Imagen" src="./src/img/ArrozMary.png" alt="ArrozMary">
+                                <img class="Imagen" src="/src/img/ArrozMary.png" alt="ArrozMary">
                             </picture>
                         </a>
                     </div>
@@ -122,7 +122,7 @@
                         <a href="/">
                             <h4><small> Imagen</small>Más</h4>
                             <picture>
-                                <img class="Imagen" src="./src/img/AzucarMontalban.png" alt="AzucarMontalban">
+                                <img class="Imagen" src="/src/img/AzucarMontalban.png" alt="AzucarMontalban">
                             </picture>
                         </a>
                     </div>
@@ -133,7 +133,7 @@
                         <a href="/">
                             <h4><small> Imagen</small>Más</h4>
                             <picture>
-                                <img class="Imagen" src="./src/img/AzucarMontalban.png" alt="CafeAmanecer">
+                                <img class="Imagen" src="/src/img/AzucarMontalban.png" alt="CafeAmanecer">
                             </picture>
                         </a>
                     </div>
@@ -144,7 +144,7 @@
                         <a href="/">
                             <h4><small> Imagen</small>Más</h4>
                             <picture>
-                                <img class="Imagen" src="./src/img/CaraotaPanteraNegra.jpg" alt="CaraotaPanteraNegra">
+                                <img class="Imagen" src="/src/img/CaraotaPanteraNegra.jpg" alt="CaraotaPanteraNegra">
                             </picture>
                         </a>
                     </div>
@@ -155,7 +155,7 @@
                         <a href="/">
                             <h4><small> Imagen</small>Más</h4>
                             <picture>
-                                <img class="Imagen" src="./src/img/DiablitosUnderwood.jpg" alt="DiablitosUnderwood">
+                                <img class="Imagen" src="/src/img/DiablitosUnderwood.jpg" alt="DiablitosUnderwood">
                             </picture>
                         </a>
                     </div>
@@ -166,7 +166,7 @@
                         <a href="/">
                             <h4><small> Imagen</small>Más</h4>
                             <picture>
-                                <img class="Imagen" src="./src/img/HarinaTrigoMary.png" alt="HarinaTrigoMary">
+                                <img class="Imagen" src="/src/img/HarinaTrigoMary.png" alt="HarinaTrigoMary">
                             </picture>
                         </a>
                     </div>
@@ -188,7 +188,7 @@
                         <a href="/">
                             <h4><small> Imagen</small>Más</h4>
                             <picture>
-                                <img class="Imagen" src="./src/img/KetchupPampero.jpg" alt="KetchupPampero">
+                                <img class="Imagen" src="/src/img/KetchupPampero.jpg" alt="KetchupPampero">
                             </picture>
                         </a>
                     </div>
@@ -199,7 +199,7 @@
                         <a href="/">
                             <h4><small> Imagen</small>Más</h4>
                             <picture>
-                                <img class="Imagen" src="./src/img/MargarinaMavesa.jpg" alt="MargarinaMavesa">
+                                <img class="Imagen" src="/src/img/MargarinaMavesa.jpg" alt="MargarinaMavesa">
                             </picture>
                         </a>
                     </div>
@@ -210,7 +210,7 @@
                         <a href="/">
                             <h4><small> Imagen</small>Más</h4>
                             <picture>
-                                <img class="Imagen" src="./src/img/MayonesaKraft.jpg" alt="MayonesaKraft">
+                                <img class="Imagen" src="/src/img/MayonesaKraft.jpg" alt="MayonesaKraft">
                             </picture>
                         </a>
                     </div>
@@ -221,7 +221,7 @@
                         <a href="/">
                             <h4><small> Imagen</small>Más</h4>
                             <picture>
-                                <img class="Imagen" src="./src/img/MayonesaMavesa.jpg" alt="MayonesaMavesa">
+                                <img class="Imagen" src="/src/img/MayonesaMavesa.jpg" alt="MayonesaMavesa">
                             </picture>
                         </a>
                     </div>
@@ -232,7 +232,7 @@
                         <a href="/">
                             <h4><small> Imagen</small>Más</h4>
                             <picture>
-                                <img class="Imagen" src="./src/img/PastaMaryPluma.jpg" alt="PastaMaryPluma">
+                                <img class="Imagen" src="/src/img/PastaMaryPluma.jpg" alt="PastaMaryPluma">
                             </picture>
                         </a>
                     </div>
@@ -243,7 +243,7 @@
                         <a href="/">
                             <h4><small> Imagen</small>Más</h4>
                             <picture>
-                                <img class="Imagen" src="./src/img/PastaMaryVermicelli.jpg" alt="PastaMaryVermicelli">
+                                <img class="Imagen" src="/src/img/PastaMaryVermicelli.jpg" alt="PastaMaryVermicelli">
                             </picture>
                         </a>
                     </div>
@@ -254,7 +254,7 @@
                         <a href="/">
                             <h4><small> Imagen</small>Más</h4>
                             <picture>
-                                <img class="Imagen" src="./src/img/Rikesa.jpg" alt="Rikesa">
+                                <img class="Imagen" src="/src/img/Rikesa.jpg" alt="Rikesa">
                             </picture>
                         </a>
                     </div>
@@ -265,7 +265,7 @@
                         <a href="/">
                             <h4><small> Imagen</small>Más</h4>
                             <picture>
-                                <img class="Imagen" src="./src/img/VinagreHeinz.jpg" alt="VinagreHeinz">
+                                <img class="Imagen" src="/src/img/VinagreHeinz.jpg" alt="VinagreHeinz">
                             </picture>
                         </a>
                     </div>
@@ -330,7 +330,7 @@
                 <div>
                     <a href="/">
                         <picture>
-                            <img class="Imagen" src="./src/img/descuentos/DctoMaltayPepsi.jpg" alt="DctoMaltayPepsi">
+                            <img class="Imagen" src="/src/img/descuentos/DctoMaltayPepsi.jpg" alt="DctoMaltayPepsi">
                             <div class="ofertas-info">
                                 <p class="ofertas-discount">HASTA 20% DCTO. EN BEBIDAS</p>
                                 <a href="#" class="ofertas-button">Ver más</a>
@@ -346,7 +346,7 @@
                 <div>
                     <a href="/">
                         <picture>
-                            <img class="Imagen" src="./src/img/descuentos/DctoPañales.jpg" alt="DctoPañales">
+                            <img class="Imagen" src="/src/img/descuentos/DctoPañales.jpg" alt="DctoPañales">
                             <div class="ofertas-info">
                                 <p class="ofertas-discount">HASTA 20% DCTO. EN PAÑALES</p>
                                 <a href="#" class="ofertas-button">Ver más</a>
@@ -360,7 +360,7 @@
                 <div>
                     <a href="/">
                         <picture>
-                            <img class="Imagen" src="./src/img/descuentos/DctoHelados.jpg" alt="DctoHelados">
+                            <img class="Imagen" src="/src/img/descuentos/DctoHelados.jpg" alt="DctoHelados">
                             <div class="ofertas-info">
                                 <p class="ofertas-discount">HASTA 20% DCTO. EN HELADOS</p>
                                 <a href="#" class="ofertas-button">Ver más</a>
@@ -374,7 +374,7 @@
                 <div>
                     <a href="/">
                         <picture>
-                            <img class="Imagen" src="./src/img/descuentos/DctoSnaks.jpg" alt="DctoSnaks">
+                            <img class="Imagen" src="/src/img/descuentos/DctoSnaks.jpg" alt="DctoSnaks">
                             <div class="ofertas-info">
                                 <p class="ofertas-discount">HASTA 20% DCTO. EN SNAKS</p>
                                 <a href="#" class="ofertas-button">Ver más</a>
@@ -388,7 +388,7 @@
                 <div>
                     <a href="/">
                         <picture>
-                            <img class="Imagen" src="./src/img/descuentos/Dcto.Nestea.jpg" alt="DctoNestea">
+                            <img class="Imagen" src="/src/img/descuentos/Dcto.Nestea.jpg" alt="DctoNestea">
                             <div class="ofertas-info">
                                 <p class="ofertas-discount">HASTA 20% DCTO. EN NESTEA</p>
                                 <a href="#" class="ofertas-button">Ver más</a>
@@ -421,7 +421,7 @@
     <div class="market-container">
         <!-- Farmatodo -->
         <button class="market-button">
-            <img src="./src/img/supermercados/farmatodo.png" alt="Farmatodo" class="market-image">
+            <img src="/src/img/supermercados/farmatodo.png" alt="Farmatodo" class="market-image">
             <div class="market-name">Farmatodo</div>
             <div class="market-rating">
                 <span class="star">&#9733;</span>
@@ -434,7 +434,7 @@
 
         <!-- Fresco Market -->
         <button class="market-button">
-            <img src="./src/img/supermercados/FrescoMarket.png" alt="Fresco Market" class="market-image">
+            <img src="/src/img/supermercados/FrescoMarket.png" alt="Fresco Market" class="market-image">
             <div class="market-name">Fresco Market</div>
             <div class="market-rating">
                 <span class="star">&#9733;</span>
@@ -447,7 +447,7 @@
 
         <!-- Forum -->
         <button class="market-button">
-            <img src="./src/img/supermercados/forum.png" alt="Forum" class="market-image">
+            <img src="/src/img/supermercados/forum.png" alt="Forum" class="market-image">
             <div class="market-name">Forum</div>
             <div class="market-rating">
                 <span class="star">&#9733;</span>
@@ -460,7 +460,7 @@
 
         <!-- El Plazas -->
         <button class="market-button">
-            <img src="./src/img/supermercados/Plazas.png" alt="El Plazas" class="market-image">
+            <img src="/src/img/supermercados/Plazas.png" alt="El Plazas" class="market-image">
             <div class="market-name">El Plazas</div>
             <div class="market-rating">
                 <span class="star">&#9733;</span>
@@ -477,7 +477,7 @@
     <div class="footer-left">
         <figure class="container-logo-footer">
             <a href="#">
-                <img class="logo-footer" src="./src/img/CLogo.png" alt="comparados">
+                <img class="logo-footer" src="/src/img/CLogo.png" alt="comparados">
                 <p>8XP5+CJ3, Carr. Panamericana, Los Teques 1201, Miranda</p>
             </a>
         </figure>
