Url de carrusel 2

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                         <a href="/">
                             <h4><small> Imagen</small>Más</h4>
                             <picture>
-                                <img class="Imagen" src="./src/img/VinagreHeinz.jpg" alt="VinagreHeinz">
+                                <img class="Imagen" src="src/img/AceiteMazeite.jpg" alt="VinagreHeinz">
                             </picture>
                         </a>
                     </div>
@@ -330,7 +330,7 @@
                 <div>
                     <a href="/">
                         <picture>
-                            <img class="Imagen" src="/src/img/descuentos/DctoMaltayPepsi.jpg" alt="DctoMaltayPepsi">
+                            <img class="Imagen" src="src/img/descuentos/DctoMaltayPepsi.jpg" alt="DctoMaltayPepsi">
                             <div class="ofertas-info">
                                 <p class="ofertas-discount">HASTA 20% DCTO. EN BEBIDAS</p>
                                 <a href="#" class="ofertas-button">Ver más</a>
@@ -346,7 +346,7 @@
                 <div>
                     <a href="/">
                         <picture>
-                            <img class="Imagen" src="/src/img/descuentos/DctoPañales.jpg" alt="DctoPañales">
+                            <img class="Imagen" src="src/img/descuentos/DctoPañales.jpg" alt="DctoPañales">
                             <div class="ofertas-info">
                                 <p class="ofertas-discount">HASTA 20% DCTO. EN PAÑALES</p>
                                 <a href="#" class="ofertas-button">Ver más</a>
@@ -360,7 +360,7 @@
                 <div>
                     <a href="/">
                         <picture>
-                            <img class="Imagen" src="/src/img/descuentos/DctoHelados.jpg" alt="DctoHelados">
+                            <img class="Imagen" src="src/img/descuentos/DctoHelados.jpg" alt="DctoHelados">
                             <div class="ofertas-info">
                                 <p class="ofertas-discount">HASTA 20% DCTO. EN HELADOS</p>
                                 <a href="#" class="ofertas-button">Ver más</a>
@@ -374,7 +374,7 @@
                 <div>
                     <a href="/">
                         <picture>
-                            <img class="Imagen" src="/src/img/descuentos/DctoSnaks.jpg" alt="DctoSnaks">
+                            <img class="Imagen" src="src/img/descuentos/DctoSnaks.jpg" alt="DctoSnaks">
                             <div class="ofertas-info">
                                 <p class="ofertas-discount">HASTA 20% DCTO. EN SNAKS</p>
                                 <a href="#" class="ofertas-button">Ver más</a>
@@ -388,7 +388,7 @@
                 <div>
                     <a href="/">
                         <picture>
-                            <img class="Imagen" src="/src/img/descuentos/Dcto.Nestea.jpg" alt="DctoNestea">
+                            <img class="Imagen" src="src/img/descuentos/Dcto.Nestea.jpg" alt="DctoNestea">
                             <div class="ofertas-info">
                                 <p class="ofertas-discount">HASTA 20% DCTO. EN NESTEA</p>
                                 <a href="#" class="ofertas-button">Ver más</a>
@@ -421,7 +421,7 @@
     <div class="market-container">
         <!-- Farmatodo -->
         <button class="market-button">
-            <img src="/src/img/supermercados/farmatodo.png" alt="Farmatodo" class="market-image">
+            <img src="src/img/supermercados/farmatodo.png" alt="Farmatodo" class="market-image">
             <div class="market-name">Farmatodo</div>
             <div class="market-rating">
                 <span class="star">&#9733;</span>
@@ -434,7 +434,7 @@
 
         <!-- Fresco Market -->
         <button class="market-button">
-            <img src="/src/img/supermercados/FrescoMarket.png" alt="Fresco Market" class="market-image">
+            <img src="src/img/supermercados/FrescoMarket.png" alt="Fresco Market" class="market-image">
             <div class="market-name">Fresco Market</div>
             <div class="market-rating">
                 <span class="star">&#9733;</span>
@@ -447,7 +447,7 @@
 
         <!-- Forum -->
         <button class="market-button">
-            <img src="/src/img/supermercados/forum.png" alt="Forum" class="market-image">
+            <img src="src/img/supermercados/forum.png" alt="Forum" class="market-image">
             <div class="market-name">Forum</div>
             <div class="market-rating">
                 <span class="star">&#9733;</span>
@@ -460,7 +460,7 @@
 
         <!-- El Plazas -->
         <button class="market-button">
-            <img src="/src/img/supermercados/Plazas.png" alt="El Plazas" class="market-image">
+            <img src="src/img/supermercados/Plazas.png" alt="El Plazas" class="market-image">
             <div class="market-name">El Plazas</div>
             <div class="market-rating">
                 <span class="star">&#9733;</span>
