cambio de URL  en index harina pan

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <a href="/">
                             <h4><small> Imagen</small>Más</h4>
                             <picture>
-                                <img class="Imagen" src="./src/img/HarinaPan.png" alt="HarinaPan">
+                                <img class="Imagen" src="src/img/productos/farmatodo/harinaPan.png" alt="HarinaPan">
                             </picture>
                         </a>
                     </div>
