"Cambio de URL imagenes"

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <a href="/">
                             <h4><small> Imagen</small>Más</h4>
                             <picture>
-                                <img class="Imagen" src="./src/img/AceiteMazeite.jpg" alt="AceiteMazeite">
+                                <img class="Imagen" src="src/img/productos/farmatodo/aceiteMazeite.jpg" alt="AceiteMazeite">
                             </picture>
                         </a>
                     </div>
@@ -111,7 +111,7 @@
                         <a href="/">
                             <h4><small> Imagen</small>Más</h4>
                             <picture>
-                                <img class="Imagen" src="./src/img/ArrozMary.png" alt="ArrozMary">
+                                <img class="Imagen" src="src/img/productos/farmatodo/arrozMarySuperior.jpg" alt="ArrozMary">
                             </picture>
                         </a>
                     </div>
@@ -122,7 +122,7 @@
                         <a href="/">
                             <h4><small> Imagen</small>Más</h4>
                             <picture>
-                                <img class="Imagen" src="./src/img/AzucarMontalban.png" alt="AzucarMontalban">
+                                <img class="Imagen" src="src/img/productos/farmatodo/azucarMontalban.png" alt="AzucarMontalban">
                             </picture>
                         </a>
                     </div>
@@ -133,7 +133,7 @@
                         <a href="/">
                             <h4><small> Imagen</small>Más</h4>
                             <picture>
-                                <img class="Imagen" src="./src/img/CafeAmanecer.png" alt="CafeAmanecer">
+                                <img class="Imagen" src="src/img/productos/farmatodo/cafeAmanecer200gr.png" alt="CafeAmanecer">
                             </picture>
                         </a>
                     </div>
@@ -144,7 +144,7 @@
                         <a href="/">
                             <h4><small> Imagen</small>Más</h4>
                             <picture>
-                                <img class="Imagen" src="./src/img/CafeAmanecer.png" alt="CaraotaPanteraNegra">
+                                <img class="Imagen" src="src/img/productos/farmatodo/cafeAmanecer100gr.png" alt="CaraotaPanteraNegra">
                             </picture>
                         </a>
                     </div>
@@ -166,7 +166,7 @@
                         <a href="/">
                             <h4><small> Imagen</small>Más</h4>
                             <picture>
-                                <img class="Imagen" src="./src/img/HarinaTrigoMary.png" alt="HarinaTrigoMary">
+                                <img class="Imagen" src="src/img/productos/farmatodo/harinaTrigoMary.png" alt="HarinaTrigoMary">
                             </picture>
                         </a>
                     </div>
@@ -177,7 +177,7 @@
                         <a href="/">
                             <h4><small> Imagen</small>Más</h4>
                             <picture>
-                                <img class="Imagen" src="./src/img/JamonEndPlumrose.jpg" alt="JamonEndPlumrose">
+                                <img class="Imagen" src="src/img/productos/farmatodo/ja" alt="JamonEndPlumrose">
                             </picture>
                         </a>
                     </div>
@@ -188,7 +188,7 @@
                         <a href="/">
                             <h4><small> Imagen</small>Más</h4>
                             <picture>
-                                <img class="Imagen" src="./src/img/KetchupPampero.jpg" alt="KetchupPampero">
+                                <img class="Imagen" src="src/img/productos/farmatodo/ketchupPampero397gr.jpg" alt="KetchupPampero">
                             </picture>
                         </a>
                     </div>
@@ -199,7 +199,7 @@
                         <a href="/">
                             <h4><small> Imagen</small>Más</h4>
                             <picture>
-                                <img class="Imagen" src="./src/img/MargarinaMavesa.jpg" alt="MargarinaMavesa">
+                                <img class="Imagen" src="src/img/productos/farmatodo/MargarinaMavesa250gr.jpg" alt="MargarinaMavesa">
                             </picture>
                         </a>
                     </div>
@@ -210,7 +210,7 @@
                         <a href="/">
                             <h4><small> Imagen</small>Más</h4>
                             <picture>
-                                <img class="Imagen" src="./src/img/MayonesaKraft.jpg" alt="MayonesaKraft">
+                                <img class="Imagen" src="src/img/productos/farmatodo/mayonesaKraft445gr.jpg" alt="MayonesaKraft">
                             </picture>
                         </a>
                     </div>
@@ -221,7 +221,7 @@
                         <a href="/">
                             <h4><small> Imagen</small>Más</h4>
                             <picture>
-                                <img class="Imagen" src="./src/img/MayonesaMavesa.jpg" alt="MayonesaMavesa">
+                                <img class="Imagen" src="src/img/productos/farmatodo/mayonesaMavesa445gr.jpg" alt="MayonesaMavesa">
                             </picture>
                         </a>
                     </div>
@@ -232,7 +232,7 @@
                         <a href="/">
                             <h4><small> Imagen</small>Más</h4>
                             <picture>
-                                <img class="Imagen" src="./src/img/PastaMaryPluma.jpg" alt="PastaMaryPluma">
+                                <img class="Imagen" src="src/img/productos/farmatodo/pastaMaryVermicelli1kg.jpg" alt="PastaMaryPluma">
                             </picture>
                         </a>
                     </div>
@@ -243,7 +243,7 @@
                         <a href="/">
                             <h4><small> Imagen</small>Más</h4>
                             <picture>
-                                <img class="Imagen" src="./src/img/PastaMaryVermicelli.jpg" alt="PastaMaryVermicelli">
+                                <img class="Imagen" src="src/img/productos/farmatodo/pastaMaryVermicelli1kg.jpg" alt="PastaMaryVermicelli">
                             </picture>
                         </a>
                     </div>
@@ -265,7 +265,7 @@
                         <a href="/">
                             <h4><small> Imagen</small>Más</h4>
                             <picture>
-                                <img class="Imagen" src="src/img/AceiteMazeite.jpg" alt="VinagreHeinz">
+                                <img class="Imagen" src="src/img/productos/farmatodo" alt="VinagreHeinz">
                             </picture>
                         </a>
                     </div>
